syntax = "proto3";

package postapp;

option go_package = "github.com/homayoonalimohammadi/go-post-app/postapp";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Post {
    string title = 1;
    string author = 2;
    string content = 3;
    google.protobuf.Timestamp creation_date = 4;
    string id = 5;
}
message GetPostRequest {
    string token = 1;
}

message GetPostResponse {
    Post post = 1;
}

message GetPostsResponse {
    repeated Post posts = 1;
}

message CreatePostRequest {
    Post post = 1;
}

service PostApp {
    rpc CreatePost (CreatePostRequest) returns (google.protobuf.Empty) {}
    rpc GetPost (GetPostRequest) returns (GetPostResponse) {}
    rpc GetPosts (google.protobuf.Empty) returns (GetPostsResponse) {}
}